--- a/www/blocks/page/_upload-queue.scss
+++ b/www/blocks/page/_upload-queue.scss
@@ -34,6 +34,10 @@
     }
   }
 
+  #details-region {
+    width: 100%;
+  }
+
   #details-region, #responses-region {
     position: relative;
     display: inline-block;
