--- a/www/blocks/page/_surveys.scss
+++ b/www/blocks/page/_surveys.scss
@@ -12,7 +12,7 @@
   }
 
   .survey [role="link"] {
-    padding: 1.5rem 0 1.5rem 1.5rem;
+    // padding: 1.5rem 0 1.5rem 1.5rem;
     position: relative;
     .reminder {
       background-color: #fff;
