fix blocker content width and make font size smaller to fit

--- a/www/blocks/component/_blocker.scss
+++ b/www/blocks/component/_blocker.scss
@@ -39,8 +39,9 @@ body > #ui-blocker  {
   figcaption {
     padding-top: 10px;
     display: inline-block;
+    width: 100%;
     color: $global-form-control-text-color;
-    font-size: $global-form-control-font-size;
+    font-size: $global-form-control-font-size*0.75;
   }
 
 }
