add blocker form styling

--- a/www/blocks/component/_blocker.scss
+++ b/www/blocks/component/_blocker.scss
@@ -36,6 +36,17 @@ body > #ui-blocker  {
 
   }
 
+  form {
+    text-align: left;
+    label {
+      margin-bottom: 3px;
+      display: inline-block;
+    }
+    input {
+      width: 100%;
+    }
+  }
+
   figcaption {
     padding-top: 10px;
     display: inline-block;
