--- a/www/blocks/component/_blocker.scss
+++ b/www/blocks/component/_blocker.scss
@@ -36,6 +36,38 @@ body > #ui-blocker  {
 
   }
 
+  .button-pair {
+    padding: 8px $global-form-control-padding;
+    overflow: auto;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    > * {
+      float: left;
+      width: 50%;
+    }
+    > :first-child {
+      button {
+        background-color: #b00;
+        color: #fff;
+      }
+      padding-right: 4px;
+    }
+    > :last-child {
+      button {
+        background-color: #00aeff;
+        color: #fff;
+      }
+      padding-left: 4px;
+    }
+    button {
+      width: 100%;
+      border: 0;
+      border-radius: 0;
+    }
+  }
+
   form {
     text-align: left;
     label {
