--- a/www/blocks/component/_blocker.scss
+++ b/www/blocks/component/_blocker.scss
@@ -36,6 +36,17 @@ body > #ui-blocker  {
 
   }
 
+  #notice {
+    font-size: $app-header-menu-font-size;
+    background-color: #FFDDEE;
+    color: #B01;
+    padding: $global-form-control-padding;
+    margin: 0;
+    &:empty {
+      display: none;
+    }
+  }
+
   button,
   input[type="button"],
   input[type="date"],
