style any content header within the blocker content

--- a/www/blocks/component/_blocker.scss
+++ b/www/blocks/component/_blocker.scss
@@ -53,6 +53,12 @@ body > #ui-blocker  {
     margin: 0;
   }
 
+  .content-header {
+    font-size: $app-header-menu-font-size*0.85;
+    padding: $global-form-control-padding*0.85;
+    margin: 0;
+  }
+
   button,
   input[type="button"],
   input[type="date"],
