replace link to png with SVG file instead

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -18,7 +18,7 @@
   }
 
   &.sync {
-    background-image: url("../img/icon/sync.png");
+    background-image: url("../img/icon/sync.svg");
     height: 55px;
     width: 55px;
   }
