expand sync icon size a little bit

--- a/www/blocks/app/_header.scss
+++ b/www/blocks/app/_header.scss
@@ -16,6 +16,9 @@ body > header > div  {
       background-size: $app-header-image-size;
       background-repeat: no-repeat;
     }
+    &.sync {
+      background-size: $app-header-image-size*1.3;
+    }
   }
 
   > h1 {
