add trash icon css

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -86,6 +86,9 @@
     background-image: url("../img/icon/logout.svg");
   }
 
+  &.trash {
+    background-image: url("../img/icon/trash.svg");
+  }
 
   &.edit {
     background-image: url("../img/icon/edit.svg");
