fix clock icon styling

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -37,7 +37,7 @@
   }
 
   &.clock {
-    background-image: url("../img/icon/clock.png");
+    background-image: url("../img/icon/clock.svg");
     height: 31px;
     width: 31px;
   }
