reference new add SVG icon

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -31,7 +31,7 @@
 
   &.add {
     // needs to be replaced with custom add icon
-    background-image: url("../img/icon/add.gif");
+    background-image: url("../img/icon/add.svg");
     height: 55px;
     width: 55px;
   }
