--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -220,9 +220,9 @@
       background-color: $component-background-color;
     }
     input[type="file"] {
-      top: 50%;
+      top: 100%;
       position: absolute;
-      height: 3rem;
+      height: 0;
       width: 100%;
       color: transparent;
       &::-webkit-file-upload-button {
@@ -232,16 +232,19 @@
         position: absolute;
         left: 0;
         right: 0;
-        top: 0;
-        content: '[TAKE PICTURE ICON HERE]';
-        text-align: center;
+        top: -2rem;
         color: #fff;
         font-weight: bold;
         background-color: rgba(55,55,55,0.9);
         border: solid rgba(255,255,255,0.8);
+        content: "";
+        background-image: url('../img/icon/camera.svg');
+        background-size: 1.5rem;
+        background-position: 97% center;
+        background-repeat: no-repeat;
         border-width: 2px 0;
         padding: 1rem;
-        font-size: 1rem;
+        font-size: 0.8rem;
         line-height: 1;
         outline: none;
         white-space: nowrap;
