reference new SVG save and info icons

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -43,7 +43,7 @@
   }
 
   &.info {
-    background-image: url("../img/icon/info.png");
+    background-image: url("../img/icon/info.svg");
   }
 
   &.delete {
@@ -51,7 +51,7 @@
   }
 
   &.save {
-    background-image: url("../img/icon/save.png");
+    background-image: url("../img/icon/save.svg");
   }
 
   &.survey {
