--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -111,14 +111,17 @@
   }
 
   &.search {
-    background-image: url("../img/icon/search.png");
+    background-image: url("../img/icon/search.svg");
     height: 56px;
     width: 56px;
 
     &.form-control {
       height: ((3/2) * $global-form-control-font-size + 2 * $global-form-control-padding);
       width: ((3/2) * $global-form-control-font-size + 2 * $global-form-control-padding);
-      background-size: ((3/2) * $global-form-control-font-size + 2 * $global-form-control-padding);
+      background-size: $global-form-control-font-size*1.5;
+      background-position: center center;
+      background-color: #4384dc;
+      background-repeat: no-repeat;
       border: 1px solid $global-form-control-border-color;
     }
 
