--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -121,8 +121,11 @@
   }
 
   #prev-button {
+
     button {
       padding-left: 2*$global-form-control-padding;
+      background: $survey-step-prev-button-background-color;
+      background: linear-gradient(to bottom, adjust-color($survey-step-prev-button-background-color, $lightness: 5%, $saturation: -5%) 0%, adjust-color($survey-step-prev-button-background-color, $lightness: -5%, $saturation: 5%) 100%);
     }
     div::before {
       content: '\2039';
@@ -134,6 +137,8 @@
   #next-button {
     button {
       padding-right: 2*$global-form-control-padding;
+      background: $survey-step-next-button-background-color;
+      background: linear-gradient(to bottom, adjust-color($survey-step-next-button-background-color, $lightness: 5%, $saturation: -5%) 0%, adjust-color($survey-step-next-button-background-color, $lightness: -5%, $saturation: 5%) 100%);
     }
     div::before {
       content: '\203A';
