add colors for new survey buttons

--- a/www/blocks/config/_page.scss
+++ b/www/blocks/config/_page.scss
@@ -1,7 +1,14 @@
 $info-region-header-height: 2.6rem !default;
 $info-region-header-font-size: 1rem !default;
 
-$survey-step-inset-block-background-color: #555 !default;
-$survey-step-inset-block-font-color: #fff !default;
+$survey-step-inset-block-background-color: #f8f8f8 !default;
+$survey-step-inset-block-font-color: #2797e0 !default;
+$survey-step-inset-block-border-color: #2d9ce3 !default;
 
 $list-icon-size: 2rem !default;
+
+$survey-step-prev-button-background-color: #e76453;
+$survey-step-next-button-background-color: #56c68a;
+$survey-step-skip-button-background-color: #dbdbdb;
+
+$survey-step-skip-button-font-color: #666666;
