--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -13,6 +13,11 @@
     padding: 0;
   }
 
+  .survey-navigation > * {
+    margin: 0 auto;
+    max-width: 500px;
+  }
+
   .inset-block {
     width: 100%;
     overflow: auto;
