add header styling - image replacement with big logo graphic

--- a/www/blocks/page/_login.scss
+++ b/www/blocks/page/_login.scss
@@ -4,6 +4,15 @@ form.login {
   > :first-child {
     margin-top: 0;
   }
+  h1 {
+    text-indent: -999px;
+    overflow: hidden;
+    border: 0;
+    background-image: url('../img/big-logo.svg');
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
   > * {
     display: block;
   }
