add help icon css

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -70,6 +70,10 @@
     background-image: url("../img/icon/analytics.svg");
   }
 
+  &.help {
+    background-image: url("../img/icon/help.svg");
+  }
+
   &.upload {
     background-image: url("../img/icon/upload.svg");
   }
