add styling for profile button

--- a/www/blocks/page/_profile.scss
+++ b/www/blocks/page/_profile.scss
@@ -8,4 +8,15 @@
   .change-password {
     margin: $app-main-footer-padding 0;
   }
+
+  .button-single {
+    button {
+      border: 0;
+      border-radius: 0;
+      text-transform: uppercase;
+      background: $modal-activate-background;
+      color: $modal-activate-font-color;
+      padding: $global-form-control-padding*1.5;
+    }
+  }
 }
