fix login server dropdown clickable area fixes #524

--- a/www/blocks/page/_login.scss
+++ b/www/blocks/page/_login.scss
@@ -54,6 +54,7 @@ form.login {
     select {
       outline: none;
       margin-bottom: $app-main-footer-padding/4;
+      width: 100%;
     }
   }
 }
