fix button styling on profile page

--- a/www/blocks/page/_profile.scss
+++ b/www/blocks/page/_profile.scss
@@ -10,7 +10,10 @@
   }
 
   .button-single {
+    width: 100%;
+    text-align: center;
     button {
+      display: inline-block;
       border: 0;
       border-radius: 0;
       text-transform: uppercase;
