--- a/www/blocks/component/_hide-show-password.scss
+++ b/www/blocks/component/_hide-show-password.scss
@@ -6,13 +6,14 @@
 .hideShowPassword-toggle {
   background: transparent;
   border: 0;
-  border-radius: 0.25em;
-  color: #888;
+  border-radius: $global-form-control-border-radius;
+  color: lighten($global-form-control-text-color, 20%);
   cursor: pointer;
-  font-size: 0.75em;
+  font-size: $global-form-control-font-size*0.8;
   font-weight: bold;
-  margin-right: 0.5em;
-  padding: 0.5em;
+  margin-right: 1px;
+  margin-top: 1px;
+  padding: $global-form-control-padding;
   text-transform: uppercase;
   -moz-appearance: none;
   -webkit-appearance: none;
