update styling for logo header

--- a/www/blocks/page/_login.scss
+++ b/www/blocks/page/_login.scss
@@ -4,14 +4,19 @@ form.login {
   > :first-child {
     margin-top: 0;
   }
+  .error:empty {
+    display: none;
+  }
   h1 {
     text-indent: -999px;
     overflow: hidden;
     border: 0;
-    background-image: url('../img/big-logo.svg');
+    background-image: url('../img/app-logo-header.png');
     background-position: center center;
     background-size: contain;
     background-repeat: no-repeat;
+    margin-bottom: $global-form-control-padding*2;
+    height: 3.5rem;
   }
   > * {
     display: block;
