--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -13,6 +13,10 @@
     padding: 0;
   }
 
+  .submit-disabler {
+    display: none;
+  }
+
   .survey-navigation > * {
     margin: 0 auto;
     max-width: 500px;
