--- a/www/blocks/page/_reminders-list.scss
+++ b/www/blocks/page/_reminders-list.scss
@@ -166,6 +166,7 @@ $reminders-list-border-width: 1px;
     float: right;
     width: $reminders-list-width;
     text-align: right;
+    visibility: hidden;
   }
 
   .repeat-tag {
