change the delete icon to the trash icon

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -47,7 +47,7 @@
   }
 
   &.delete {
-    background-image: url("../img/icon/delete.svg");
+    background-image: url("../img/icon/trash.svg");
   }
 
   &.save {
