--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -49,33 +49,44 @@
     margin: 0;
     padding: 0;
 
-    > li {
-      background-color: #ddd;
-      position: relative;
-      overflow: hidden;
-    }
+    table-layout: fixed;
+    width: 100%;
+    word-wrap: break-word;
 
     input[type="checkbox"], input[type="radio"], button.delete {
       margin: $app-main-footer-padding;
       line-height: 1;
     }
 
-    label {
+    tr {
+      border-bottom: 1px solid $app-list-border-color;
+    }
+    tr:last-child {
+      border-bottom: none;
+    }
+
+    td.left,td.right {
+      width: 3rem;
+      &:empty {
+        width: 0;
+      }
+    }
+    td.left {
+      background-color: $app-background;
+    }
+
+    td.content {
       background-color: #fff;
-      position: absolute;
-      height: 3rem;
-      right: 0;
-      left: (3 * $app-main-footer-padding);
-      padding: $app-main-footer-padding;
+    }
+    label {
       line-height: 1;
-      z-index: 10;
       font-size: $global-form-control-font-size;
+      display: inline-block;
+      padding: $global-form-control-padding*2;
+      width: 100%;
     }
 
     button.delete {
-      position: absolute;
-      right: 0;
-      z-index: 11;
       background-size: 1rem;
       height: 1rem;
       width: 1rem;
@@ -93,7 +104,8 @@
     }
   }
 
-  .my-add, .prompt-list > li {
+  .my-add {
+    border-top: 1px solid $app-list-border-color;
     border-bottom: 1px solid $app-list-border-color;
     width: 100%;
     height: 3rem;
