update styling for response summary

--- a/www/blocks/page/_reminders-list.scss
+++ b/www/blocks/page/_reminders-list.scss
@@ -145,21 +145,23 @@ $reminders-list-border-width: 1px;
     }
   }
 
-  .summary-time {
+  .summary-time, .repeat-time {
+    font-size: 0.65rem;
+    padding: $global-form-control-padding/2;
     position: absolute;
     bottom: 0;
-    right: 0;
+  }
+
+  .summary-time {
+    left: 0;
     color: rgb(0,132,174);
     background: #F0F0FA;
     font-weight: bold;
-    font-size: 0.65rem;
-    padding: $global-form-control-padding/2;
   }
 
   .repeat-time {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    right: 0;
+    color: rgb(0,132,174);
   }
 
   .enable-switch-container {
@@ -170,19 +172,24 @@ $reminders-list-border-width: 1px;
   }
 
   .repeat-tag {
-    display: inline-block;
-    color: rgb(0,132,174);
-    background: #F0F0FA;
-    font-size: 0.65rem;
-    padding: $global-form-control-padding/2;
-    text-transform: uppercase;
-    margin: 0;
-    margin-right: $global-form-control-padding;
+    display: none;
   }
-  .interval {
-    font-size: 0.65rem;
-    color: rgb(0,132,174);
-  }
+
+  // .repeat-tag {
+  //   display: inline-block;
+  //   color: rgb(0,132,174);
+  //   background: #F0F0FA;
+  //   font-size: 0.65rem;
+  //   padding: $global-form-control-padding/2;
+  //   text-transform: uppercase;
+  //   margin: 0;
+  //   margin-right: $global-form-control-padding;
+  // }
+  // .interval {
+  //   font-size: 0.65rem;
+  //   color: rgb(0,132,174);
+  // }
+
   .hotspot {
     z-index: 0;
     position: absolute;
