--- a/www/blocks/config/_app.scss
+++ b/www/blocks/config/_app.scss
@@ -1,10 +1,9 @@
 $app-header-height: 3rem !default;
 $app-header-image-size: 1.4rem !default;
-$app-header-font-size: 1.2rem !default;
-$app-header-font-color: #555 !default;
+$app-header-font-size: 1.0rem !default;
 $app-header-menu-header-height: 3rem !default;
 $app-header-menu-header-icon-size: 1.3rem !default;
-$app-header-menu-header-font-size: 1rem !default;
+$app-header-menu-header-font-size: 1.1rem !default;
 $app-header-menu-font-size: 1rem !default;
 $app-header-menu-header-border-color: #666 !default;
 $app-header-menu-header-font-color: #fff !default;
@@ -18,7 +17,13 @@ $app-header-menu-list-border-color: #484848 !default;
 $app-header-menu-font-color: #fff !default;
 $app-header-menu-height: 3rem !default;
 $app-header-border-color: #aaa !default;
-$app-header-background: #eee linear-gradient(to bottom, #e6e6e6 0%, #eeeeee 30%, #eeeeee 70%, #e6e6e6 100%) !default;
+
+// $app-header-background: #eee linear-gradient(to bottom, #e6e6e6 0%, #eeeeee 30%, #eeeeee 70%, #e6e6e6 100%) !default;
+
+$app-footer-background-color: #555 !default;
+
+$app-header-background: #262626 linear-gradient(to bottom, #202020 0%, #2a2a2a 30%, #2a2a2a 70%, #202020 100%) !default;
+$app-header-font-color: white;
 
 $app-list-border-color: #ddd !default;
 $app-list-box-shadow: inset 0 2px 2px rgba(0,0,0,.05) !default;
