make footer use new footer background color

--- a/www/blocks/app/_footer.scss
+++ b/www/blocks/app/_footer.scss
@@ -11,7 +11,7 @@ body > footer {
     a {    
       display: inline-block;
       padding: $global-form-control-padding/2;
-      background: $app-header-font-color;
+      background: $app-footer-background-color;
       text-transform: uppercase;
       color: $app-background;
       border-radius: $global-form-control-border-radius;
