--- a/www/blocks/page/_upload-queue.scss
+++ b/www/blocks/page/_upload-queue.scss
@@ -34,22 +34,51 @@
     }
   }
 
-  #details-region {
+  #details-region, #responses-region {
     width: 100%;
     h3:first-child {
       margin-top: 0;
     }
-  }
-
-  #details-region, #responses-region {
     position: relative;
     display: inline-block;
     vertical-align: middle;
     padding: (1*$app-main-footer-padding) $app-main-footer-padding;
     word-wrap: break-word;
   }
+  #details-region {
+    p:first-child {
+      margin-top: 0;
+    }
+    border-bottom: 1px solid $global-form-control-border-color;
+  }
   #responses-region {
-    background: $app-background;
     width: 100%;
+    background: $app-background;
+    .item:first-child {
+      margin-top: 0;
+    }
+    .item {
+      margin-top: $info-region-header-font-size*2;
+    }
+    header {
+      @include -clearfix;
+      border-bottom: 1px solid $global-form-control-border-color;
+      padding-bottom: $info-region-header-font-size/2;
+      margin-bottom: $info-region-header-font-size/4;
+      font-size: $info-region-header-font-size;
+      i {
+        display: block;
+        float: right;
+        margin-top: -$info-region-header-font-size;
+      }
+      h5 {
+        font-size: $info-region-header-font-size;
+        margin: 0;
+        padding-right: $info-region-header-font-size*1.5;
+      }
+    }
+    ul,p {
+     font-size: $info-region-header-font-size*0.8;
+    }
   }
 }
