hide the on/off switch - repeating reminders aren’t working with turning off #545

--- a/www/blocks/page/_reminders-list.scss
+++ b/www/blocks/page/_reminders-list.scss
@@ -168,6 +168,7 @@ $reminders-list-border-width: 1px;
     float: right;
     width: $reminders-list-width;
     text-align: right;
+    visibility: hidden;
   }
 
   .repeat-tag {
