fix the show/hide button display for Firefox - note an !important rule is added here to overwrite the plugin’s behavior

--- a/www/blocks/component/_blocker.scss
+++ b/www/blocks/component/_blocker.scss
@@ -130,5 +130,7 @@ body > #ui-blocker  {
     color: $global-form-control-text-color;
     font-size: $global-form-control-font-size*0.75;
   }
-
+  .hideShowPassword-wrapper {
+    display: block !important; // required to overwrite hideShowPassword
+  }
 }
