--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -91,7 +91,13 @@
       height: 1rem;
       width: 1rem;
     }
-
+    td.right label.placeholder {
+      width: 3rem;
+      height: 3rem;
+      display: block;
+      overflow: hidden;
+      text-indent: -999px;
+    }
   }
 
   .my-add {
