provide flat background fallback for all gradient-based UI elements

--- a/www/blocks/app/_menu.scss
+++ b/www/blocks/app/_menu.scss
@@ -1,6 +1,7 @@
 #app-menu {
 
   > header {
+    background: $app-header-menu-header-background-flat;
     background: $app-header-menu-header-background;
     border-bottom: 1px solid $app-header-menu-header-border-color;
     overflow: auto;
