--- a/www/blocks/component/_blocker.scss
+++ b/www/blocks/component/_blocker.scss
@@ -92,6 +92,7 @@ body > #ui-blocker  {
     }
     > :first-child {
       button {
+        background: $modal-close-background-color;
         background: $modal-close-background;
         color: $modal-close-font-color;
       }
@@ -99,6 +100,7 @@ body > #ui-blocker  {
     }
     > :last-child {
       button {
+        background: $modal-activate-background-color;
         background: $modal-activate-background;
         color: $modal-activate-font-color;
       }
