--- a/www/blocks/config/_app.scss
+++ b/www/blocks/config/_app.scss
@@ -7,6 +7,7 @@ $app-header-menu-header-font-size: 1.1rem !default;
 $app-header-menu-font-size: 1rem !default;
 $app-header-menu-header-border-color: #666 !default;
 $app-header-menu-header-font-color: #fff !default;
+$app-header-menu-header-background-flat: #262626;
 $app-header-menu-header-background: #262626 linear-gradient(to bottom, #202020 0%, #2a2a2a 30%, #2a2a2a 70%, #202020 100%) !default;
 $app-header-menu-header-list-background: #000 !default;
 $app-header-menu-header-list-item-background: #000 !default;
@@ -22,6 +23,7 @@ $app-header-border-color: #aaa !default;
 
 $app-footer-background-color: #555 !default;
 
+$app-header-background-flat: #262626;
 $app-header-background: #262626 linear-gradient(to bottom, #202020 0%, #2a2a2a 30%, #2a2a2a 70%, #202020 100%) !default;
 $app-header-font-color: white;
 
