--- a/www/blocks/component/_slide-out.scss
+++ b/www/blocks/component/_slide-out.scss
@@ -13,6 +13,7 @@
   &[data-state="active"] {
     display: block;
     position: fixed;
+    background: black;
     background: rgba(0,0,0,0.95);
     right: calc(-1 * (#{$component-slide-out-width} - 100%));
     top: 0;
