--- a/www/blocks/component/_slide-out.scss
+++ b/www/blocks/component/_slide-out.scss
@@ -15,6 +15,7 @@
     position: fixed;
     background: black;
     background: rgba(0,0,0,0.95);
+    right: 10%;
     right: calc(-1 * (#{$component-slide-out-width} - 100%));
     top: 0;
     bottom: 0;
@@ -28,6 +29,7 @@
     right: 0;
     top: 0;
     bottom: 0;
+    left: 90%;
     left: calc(-1 * (0% - #{$component-slide-out-width})); // written oddly to make sure if the [data-state] fails, this one fails too
     z-index: 1000;
     cursor: pointer;
