copy styling from photo and video prompts over to file prompt

--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -280,7 +280,7 @@
     }
   }
 
-  .photo-control, .video-control {
+  .photo-control, .video-control, .file-control {
     .container {
       position: relative;
       min-height: 200px;
