remove icon from file version of input

--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -353,6 +353,12 @@
     }
   }
 
+  .file-control {
+    .input-activate button {
+      background-image: none;
+    }
+  }
+
   .button-pair {
     padding: 8px 0;
     overflow: auto;
