add basic styling for file header using form control settigns

--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -354,6 +354,10 @@
   }
 
   .file-control {
+    .file-header {
+      padding: $global-form-control-padding;
+      font-size: $global-form-control-font-size;
+    }
     .input-activate button {
       background-image: none;
     }
