--- a/www/blocks/page/_survey-step-multi.scss
+++ b/www/blocks/page/_survey-step-multi.scss
@@ -2,4 +2,14 @@
   // primary container with all of the main items.
   background-color: darken($survey-step-inset-block-background-color, 10%);
 
+  .survey-step-item {
+    margin-top: $global-form-control-padding;
+    box-shadow: 0 1px 0 0 darken($survey-step-inset-block-background-color, 25%);
+    background-color: lighten($app-background, 3%);
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+
 }
