--- a/www/blocks/page/_survey-step-multi.scss
+++ b/www/blocks/page/_survey-step-multi.scss
@@ -11,5 +11,11 @@
       margin-top: 0;
     }
 
+    &.error {
+      // border-top: 1px solid darken(#FFDDEE, 15%);
+      box-shadow: 0 0 0 1px darken(#FFDDEE, 15%);
+      border-left: 3px solid red;
+    }
+  }
 
 }
